# kofl-cli

./: Cargo.toml  Dockerfile  README.md  notes.txt
.github/workflows/: cross-platform-test.yml
src/: backup.rs  constants.rs  context.rs  errors.rs  main.rs  settings.rs
src/Validator/: mod.rs
src/cli/: mod.rs
src/cli/commands/: add.rs  destroy.rs  get.rs  init.rs  login.rs  mod.rs  settings.rs  update.rs
src/config/: mod.rs
src/db/: mod.rs
src/session/: mod.rs
src/setting/: core.rs  mod.rs  registry.rs  session_duration.rs  setting_key.rs  setting_value.rs
src/utils/: mod.rs
src/validator/: core.rs  duplicate.rs  entry_exists.rs  master_key.rs  mod.rs  pwd_req.rs  rate_limit.rs  registry.rs  session.rs
tests/: common.rs  destroy.rs  init_cmd.rs
