[package]
name = "kofl"
version = "0.1.0"
edition = "2021"
description = "A secure password manager CLI written in Rust"
[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rusqlite = {version = "0.32.1"}
chrono = "0.4.39"
rpassword = "7.3.1"
rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4.3"
aes = "0.8.4"
ctr = "0.9.2"
generic-array = "0.14"
[build]
rustflags = ["-Awarnings"]
