[features]
default = ["dev"]
dev = []
prod = []

[package]
name = "kofl"
version = "0.1.0"
edition = "2021"
description = "A secure password manager CLI written in Rust"
[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rusqlite = {version = "0.32.1"}
chrono = {version = "0.4.39", features = ["serde"]}
rpassword = "7.3.1"
rand = "0.8.5"
sha2 = "0.10.8"
hex = "0.4.3"
aes = "0.8.4"
ctr = "0.9.2"
generic-array = "0.14"
log = "0.4.25"
env_logger = "0.11.6"
colored = "3.0.0"
arboard = "3.4.1"
[build]
rustflags = ["-Awarnings"]

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
rstest = "0.24.0"
serial_test = "1.0"
tempfile = "3.16.0"
